# lunarb

./: BUILD_INSTRUCTIONS.md  LICENSE  README.md  build-windows.bat  build-windows.ps1  package.json
.github/workflows/: build-windows.yml
src/: index.html  newtab.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookmarks.rs  history.rs  lib.rs  main.rs  settings.rs  tab.rs  theme.rs
src/scripts/: app.js
src/styles/: main.css  newtab.css  themes.css
