[package]
name = "lunar-browser"
version = "1.0.0"
description = "Lunar - A fast, beautiful, customizable browser"
authors = ["Lunar"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lunar_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-window-state = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
once_cell = "1.20"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
urlencoding = "2.1"
url = "2.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
debug = false
incremental = false

[profile.dev]
incremental = true

[features]
custom-protocol = ["tauri/custom-protocol"]
